add_library(space SHARED triangulation.cpp initial_triangulation.cpp basis.cpp operators.cpp triangulation_view.cpp)

add_executable(triangulation_view_performance triangulation_view_performance.cpp)
target_link_libraries(triangulation_view_performance space)

# Create tests
package_add_test(triangulation_test triangulation_test.cpp)
target_link_libraries(triangulation_test space)

package_add_test(triangulation_view_test triangulation_view_test.cpp)
target_link_libraries(triangulation_view_test space)

package_add_test(bilinear_formtest bilinear_form_test.cpp)
target_link_libraries(bilinear_formtest space)

package_add_test(space_linear_functional_test linear_functional_test.cpp)
target_link_libraries(space_linear_functional_test space)
