add_library(space SHARED triangulation.cpp initial_triangulation.cpp basis.cpp operators.cpp triangulation_view.cpp)

add_executable(triangulation_view_performance triangulation_view_performance.cpp)
target_link_libraries(triangulation_view_performance space)

# Create tests
package_add_test(triangulation_test triangulation_test.cpp)
target_link_libraries(triangulation_test space)

package_add_test(triangulation_view_test triangulation_view_test.cpp)
target_link_libraries(triangulation_view_test space)

package_add_test(space_bilinear_form_test bilinear_form_test.cpp)
target_link_libraries(space_bilinear_form_test space)

package_add_test(space_linear_form_test linear_form_test.cpp)
target_link_libraries(space_linear_form_test space)

package_add_test(space_operators_test operators_test.cpp)
target_link_libraries(space_operators_test space)
