add_executable(spacetime_bilinear_form_performance bilinear_form_performance.cpp)
target_link_libraries(spacetime_bilinear_form_performance space time)

# Create tests.
package_add_test(spacetime_basis_test basis_test.cpp)
target_link_libraries(spacetime_basis_test space time)

package_add_test(spacetime_bilinear_form_test bilinear_form_test.cpp)
target_link_libraries(spacetime_bilinear_form_test space time)

package_add_test(spacetime_linear_form_test linear_form_test.cpp)
target_link_libraries(spacetime_linear_form_test space time)
